feat(home): add hero section + translations

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -23,5 +23,10 @@
   "common": {
     "bank_offer_sub_title_multiple": "ادفع قيمة مشترياتك عبر أحد البطاقات البنكة التالية واحصل على الخصم المحدد",
     "bank_offer_sub_title_single": "ادفع قيمة مشترياتك عبر أحد بطاقات بنك :bank_name واحصل على خصم بنسبة "
+  },
+  "home": {
+    "hero_title": "اطلالتك تبدأ من هنا",
+    "hero_subtitle": "مكياج مواسم جديدة — اكتشفي الأكثر مبيعًا",
+    "shop_now": "تسوقي الآن"
   }
 }
